# geany-sidebarterm

./: .gitignore  Makefile  Makefile.am  README  configure  configure.ac  geany-vte-hookup.patch  geany_vte.patch  sidebarterm.c
